--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Chat.chat_history.history_chat"></activity>
+        <activity
+            android:name=".statisticActivity"
+            android:label="@string/title_activity_statistic"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Chat.chat_history.history_chat" />
         <activity android:name=".interviewActivity.results.results_app" />
         <activity android:name=".interviewActivity.crtNewInterview.NewInterview" />
         <activity android:name=".interviewActivity.interview" />
