--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        url "https://s3-us-west-2.amazonaws.com/openlocate-android/"
 
 
     }
