--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Profil.ProfilActivity"></activity>
         <activity
             android:name=".statisticActivity"
             android:label="@string/title_activity_statistic"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Chat.chat_history.history_chat" />
         <activity android:name=".interviewActivity.results.results_app" />
         <activity android:name=".interviewActivity.crtNewInterview.NewInterview" />
