--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.akexorcist:localization:1.2.5'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'jp.wasabeef:blurry:2.1.0'
+    implementation 'com.jakewharton:butterknife:8.8.1'
 
     implementation 'com.openlocate:openlocate:2.+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
