--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,38 +25,34 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'jp.wasabeef:blurry:2.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.google.android.gms:play-services-auth:9.0.2'
-    compile 'com.google.firebase:firebase-storage:9.0.2'
-    compile 'com.google.firebase:firebase-common:9.0.2'
-    compile 'com.google.firebase:firebase-auth:9.0.2'
-    compile 'com.google.firebase:firebase-database:9.0.2'
-    compile 'com.google.firebase:firebase-crash:9.0.2'
-    compile 'com.google.android.gms:play-services-appindexing:9.0.2'
+    implementation 'com.google.android.gms:play-services-auth:9.0.2'
+    implementation 'com.google.firebase:firebase-storage:9.0.2'
+    implementation 'com.google.firebase:firebase-common:9.0.2'
+    implementation 'com.google.firebase:firebase-auth:9.0.2'
+    implementation 'com.google.firebase:firebase-database:9.0.2'
+    implementation 'com.google.firebase:firebase-crash:9.0.2'
+    implementation 'com.google.android.gms:play-services-appindexing:9.0.2'
     // FirebaseUI Database only
-    compile 'com.firebaseui:firebase-ui-database:1.0.1'
+    implementation 'com.firebaseui:firebase-ui-database:1.0.1'
     // FirebaseUI Auth only
-    compile 'com.firebaseui:firebase-ui-auth:1.0.1'
+    implementation 'com.firebaseui:firebase-ui-auth:1.0.1'
     // FirebaseUI Storage only
-    compile 'com.firebaseui:firebase-ui-storage:1.0.1'
+    implementation 'com.firebaseui:firebase-ui-storage:1.0.1'
     // Single target that includes all FirebaseUI libraries above
-    compile 'com.firebaseui:firebase-ui:1.0.1'
+    implementation 'com.firebaseui:firebase-ui:1.0.1'
 
-    compile 'pub.devrel:easypermissions:0.1.5'
-    compile 'com.github.bumptech.glide:glide:3.6.0'
-    compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'org.apache.httpcomponents:httpcore:4.3.1'
-    compile 'org.apache.httpcomponents:httpmime:4.3.1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
+    implementation 'pub.devrel:easypermissions:0.1.5'
+    implementation 'com.github.bumptech.glide:glide:3.6.0'
+    implementation 'de.hdodenhof:circleimageview:2.0.0'
+    implementation 'org.apache.httpcomponents:httpcore:4.3.1'
+    implementation 'org.apache.httpcomponents:httpmime:4.3.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
 
-    compile 'fr.tvbarthel.blurdialogfragment:lib:2.2.0'
-    compile 'com.camnter.easyslidingtabs:easyslidingtabs:1.0'
+    implementation 'fr.tvbarthel.blurdialogfragment:lib:2.2.0'
+    implementation 'com.camnter.easyslidingtabs:easyslidingtabs:1.0'
 
-    //compile 'com.jakewharton:butterknife:8.4.0'
-    //annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    //compile 'com.jakewharton.timber:timber:4.3.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.commonsware.cwac:camera:0.7.0'
-    compile 'com.fenchtose.nocropper:nocropper:0.1.7'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.fenchtose.nocropper:nocropper:0.1.7'
 
     implementation 'com.openlocate:openlocate:2.+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
