--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,31 +26,13 @@ dependencies {
     implementation 'jp.wasabeef:blurry:2.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.google.android.gms:play-services-auth:9.0.2'
-    implementation 'com.google.firebase:firebase-storage:9.0.2'
-    implementation 'com.google.firebase:firebase-common:9.0.2'
-    implementation 'com.google.firebase:firebase-auth:9.0.2'
-    implementation 'com.google.firebase:firebase-database:9.0.2'
-    implementation 'com.google.firebase:firebase-crash:9.0.2'
-    implementation 'com.google.android.gms:play-services-appindexing:9.0.2'
-    // FirebaseUI Database only
-    implementation 'com.firebaseui:firebase-ui-database:1.0.1'
-    // FirebaseUI Auth only
-    implementation 'com.firebaseui:firebase-ui-auth:1.0.1'
-    // FirebaseUI Storage only
-    implementation 'com.firebaseui:firebase-ui-storage:1.0.1'
-    // Single target that includes all FirebaseUI libraries above
+
     implementation 'com.firebaseui:firebase-ui:1.0.1'
 
     implementation 'pub.devrel:easypermissions:0.1.5'
     implementation 'com.github.bumptech.glide:glide:3.6.0'
     implementation 'de.hdodenhof:circleimageview:2.0.0'
-    implementation 'org.apache.httpcomponents:httpcore:4.3.1'
-    implementation 'org.apache.httpcomponents:httpmime:4.3.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
-
-    implementation 'fr.tvbarthel.blurdialogfragment:lib:2.2.0'
-    implementation 'com.camnter.easyslidingtabs:easyslidingtabs:1.0'
-
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.fenchtose.nocropper:nocropper:0.1.7'
 
@@ -63,6 +45,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:25.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
