--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profil.ProfilActivity"></activity>
+        <activity
+            android:name=".feed.TabbsActivity"
+            android:label="@string/title_activity_tabbs"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Profil.ProfilActivity" />
         <activity
             android:name=".statisticActivity"
             android:label="@string/title_activity_statistic"
