--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:9.0.2'
 
     implementation 'com.firebaseui:firebase-ui:1.0.1'
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'pub.devrel:easypermissions:0.1.5'
     implementation 'com.github.bumptech.glide:glide:3.6.0'
     implementation 'de.hdodenhof:circleimageview:2.0.0'
