--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,11 @@ dependencies {
     implementation 'jp.wasabeef:blurry:2.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.google.android.gms:play-services-auth:9.0.2'
-
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.android.support:appcompat-v7:25.1.0'
+    implementation 'com.caverock:androidsvg:1.2.2-beta-1'
+    implementation 'com.github.bumptech.glide:glide:4.0.0-RC0'
     implementation 'com.firebaseui:firebase-ui:1.0.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -80,4 +84,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    implementation('com.github.bumptech.glide:glide:4.7.1') {
+        exclude group: 'com.android.support'
+    }
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'   // use latest version
 }
