--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,8 @@
+buildscript {
+    repositories {
+    }
+
+}
 apply plugin: 'com.android.application'
 
 android {
@@ -10,6 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
