--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
-
+    implementation 'com.github.bumptech.glide:annotations:4.3.1'
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
 
 }
