--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,6 @@ dependencies {
 
     implementation 'com.openlocate:openlocate:2.+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.scaledrone:scaledrone-java:0.6.0'
     implementation 'com.mindorks:placeholderview:0.7.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -88,5 +87,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     implementation 'com.github.bumptech.glide:annotations:4.3.1'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
-
+    implementation 'com.github.bumptech.glide:glide:4.8.0-SNAPSHOT'
+    annotationProcessor 'androidx.annotation:annotation:1.0.0-beta01'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0-SNAPSHOT'
 }
