--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://s3-us-west-2.amazonaws.com/openlocate-android/" }
         maven {
             url 'https://maven.fabric.io/public'
