--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,12 +52,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.scaledrone:scaledrone-java:0.6.0'
     implementation 'com.mindorks:placeholderview:0.7.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'android.constraintlayout:constraintlayout:1.1.3'
+    implementation 'android.legacy:legacy-support-v4:1.0.0'
+    implementation 'android.lifecycle:lifecycle-extensions:2.0.0'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'android.test.ext:junit:1.1.1'
+    androidTestImplementation 'android.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
 
     // MVP
@@ -82,8 +82,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
-    implementation 'androidx.room:room-runtime:2.2.5'
-    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    implementation 'android.room:room-runtime:2.2.5'
+    annotationProcessor 'android.room:room-compiler:2.2.5'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     implementation 'com.github.bumptech.glide:annotations:4.3.1'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
