--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0-SNAPSHOT'
     annotationProcessor 'androidx.annotation:annotation:1.0.0-beta01'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0-SNAPSHOT'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 }
