--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,7 @@ dependencies {
     annotationProcessor 'androidx.annotation:annotation:1.0.0-beta01'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0-SNAPSHOT'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.hgayan7:FilterLibrary:0.1.0'
+
 
 }
