--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.github.hgayan7:FilterLibrary:0.1.0'
     implementation 'me.gujun.android.taggroup:library:1.4@aar'
+    implementation 'com.android.support:appcompat-v7:+'
+
 
 
 
