--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
     implementation 'com.firebaseui:firebase-ui:1.0.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'pub.devrel:easypermissions:0.1.5'
     implementation 'com.github.bumptech.glide:glide:3.6.0'
@@ -89,9 +90,7 @@ dependencies {
     implementation 'me.gujun.android.taggroup:library:1.4@aar'
     implementation 'com.android.support:appcompat-v7:+'
     implementation 'net.alhazmy13.ImageFilters:library:0.1.2-beta'
-
-
-
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
 
 
 }
