--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.rbddevs.splashy:splashy:1.3.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72+" // For JAVA Only
+
     implementation 'com.google.code.gson:gson:2.7'
     implementation 'com.akexorcist:localization:1.2.5'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
