--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'jp.wasabeef:blurry:2.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.google.android.gms:play-services-auth:9.0.2'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
     implementation 'com.firebaseui:firebase-ui:1.0.1'
