--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.google.android.gms:play-services-auth:9.0.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.0'
 
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
     implementation 'com.firebaseui:firebase-ui:1.0.1'
