--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui:1.0.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'pub.devrel:easypermissions:0.1.5'
     implementation 'com.github.bumptech.glide:glide:3.6.0'
