--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.0'
     implementation 'com.ms-square:expandableTextView:0.1.4'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
     implementation 'com.firebaseui:firebase-ui:1.0.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
