--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
     implementation 'com.github.bxute:StoryView:v1.0'
     implementation "androidx.core:core-ktx:1.6.0"
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.lorentzos.swipecards:library:1.0.9'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
