--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,17 +19,24 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
     dataBinding{
-        enabled=true
+        enabled true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
+
+    }
+
 }
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.iammert:MultiSearchView:0.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -38,23 +45,25 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
     implementation 'com.github.bxute:StoryView:v1.0'
-    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.github.bxute:StoryView:v1.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'com.google.android.material:material:1.5.0-beta01'
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+
 
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation "com.google.firebase:firebase-auth:21.0.1"
     implementation 'com.github.AsynctaskCoffee:tinderlikecardstack:1.0'
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
-    implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.google.firebase:firebase-analytics:20.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"  // add this line
-
 
 }
 repositories {
