--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.iammert:MultiSearchView:0.3'
