--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 33
-    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.Denzo.firl"
         minSdkVersion 21
@@ -53,15 +52,16 @@ dependencies {
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation "androidx.appcompat:appcompat:1.4.1"
+    implementation "com.google.android.material:material:1.6.0"
+
+
+
     implementation 'com.github.bxute:StoryView:v1.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
     implementation 'com.google.android.material:material:1.7.0'
-
-
-
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "com.google.firebase:firebase-auth:21.0.8"
     implementation 'com.github.AsynctaskCoffee:tinderlikecardstack:1.0'
