--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
     implementation 'com.jakewharton:butterknife:10.2.3'
+    androidTestImplementation 'junit:junit:4.13.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
@@ -47,26 +48,28 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.caverock:androidsvg:1.2.2-beta-1'
     implementation 'com.github.bxute:StoryView:v1.0'
-    implementation "androidx.core:core-ktx:1.9.0"
-    implementation 'com.google.firebase:firebase-storage:20.1.0'
+    implementation "androidx.core:core-ktx:1.12.0"
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'com.lorentzos.swipecards:library:1.0.9'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "com.google.android.material:material:1.8.0"
+    implementation "com.google.android.material:material:1.10.0"
 
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 
     implementation 'com.github.bxute:StoryView:v1.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "com.google.firebase:firebase-auth:21.0.8"
+    implementation "com.google.firebase:firebase-auth:22.3.0"
     implementation 'com.github.AsynctaskCoffee:tinderlikecardstack:1.0'
-    implementation 'com.google.firebase:firebase-analytics:21.2.0'
-    implementation 'com.google.firebase:firebase-database:20.0.6'
+    implementation 'com.google.firebase:firebase-analytics:21.5.0'
+    implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"  // add this line
 
 }
