--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     androidTestImplementation 'junit:junit:4.13.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'com.google.firebase:firebase-auth:22.3.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.9'
