--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,14 @@ android {
         dataBinding = true
 
     }
+    namespace 'com.Denzo.firl'
 
 }
 
 dependencies {
     implementation 'com.jakewharton:butterknife:10.2.3'
+    implementation 'androidx.core:core:1.13.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     androidTestImplementation 'junit:junit:4.13.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
