--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Swipe.SwipeActivity"
+            android:exported="false" />
+        <activity
             android:name=".chat.ChatFragment"
             android:exported="false" />
-
         <activity
             android:name=".SettingsActivity"
             android:exported="true" />
         <activity
             android:name=".Login.register.SignupActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Login.LoginActivity"
             android:exported="true" />
